# CHV_Badge_Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake.yml  release.yml
Verification/: code.py
firmware/: CMakeLists.txt  boot.py  code.py  rp1_firmware.c  rp2_firmware.c  rp3_firmware.c
firmware/c/: CMakeLists.txt  rp1_firmware.c  rp3_firmware.c
firmware/gs_usb/: usb_canbus.c
firmware/py/: CMakeLists.txt  VERSION.txt  boot.mpy  boot.py  can.py  code.mpy  engine.py  install.sh  leds.py  main.py  slcan.py  usbd_cdc.py
firmware/py/can2040_py/: CMakeLists.txt  can2040_bindings.c
firmware/slcan/: CMakeLists.txt  slcan_output.c  slcan_output.h
verification/: CMakeLists.txt  verify.c  verify_code.mpy
